--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+.ql-container{
+  min-height: 200px;
+  max-height: 500px;
+  overflow-y: auto-y;
+}
+
+.ql-syntax{
+  font-family: monospace;
+}
